assets/css/style.css
* {
  margin: 0px;
  padding: 0px;
}

html,
body {
  width: 100vw;
  height: 100vh;
  font-family: 'Inter', serif;
  background-color: #1a1a1a;
  overflow-x: hidden;
  color: #efefef;
}

div.center {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

div.background {
  background-image: url('/img/background.jpg');
  background-position: center;
  filter: saturate(0%);
  position: absolute;
  height: 100%;
  width: 100%;
  z-index: 0;
  left: 0;
  top: 0;
}

div.container {
  box-shadow: 0px 0px 4px black;
  border: 1px solid #4a4a4a;
  background-color: #1a1a1a;
  border-radius: 4px;
  padding: 20px;
  z-index: 1;
}

div.details {
  flex-direction: row;
  display: flex;
}

div.details > img {
  width: 128px;
  height: 128px;
  aspect-ratio: 1 / 1;
  border-radius: 4px;
  pointer-events: none;
  border: 1px solid #4a4a4a;
}

div.details > div.about {
  display: flex;
  margin-left: 20px;
  flex-direction: column;
  justify-content: center;
}

div.details > div.about > h2 {
  font-weight: 200;
  color: rgba(255, 255, 255, 0.5);
}

ul.socials {
  display: flex;
  list-style: none;
  margin-top: 15px;
  width: 100%;
}

ul.socials > li {
  display: inline-block;
  margin-right: 10px;
}

ul.socials > li > a {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #2a2a2a;
  border: 1px solid #4a4a4a;
  text-decoration: none;
  border-radius: 2px;
  color: #efefef;
  width: 32px;
  height: 32px;
}

ul.socials > li > a:hover {
  background-color: #3a3a3a;
  border: 1px solid #6a6a6a;
}

ul.socials > li > a > img {
  width: 16px;
}

span.label {
  display: none;
}

div.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #1a1a1a;
  box-shadow: 0px 0px 4px black;
  border-bottom: 1px solid #4a4a4a;
  position: absolute;
  height: 48px;
  width: 100%;
  z-index: 1;
  left: 0;
  top: 0;
}

div.navbar > div.left {
  margin-left: 10px;
}

div.navbar > div.left > h1 {
  font-size: 20px;
}

div.navbar > div.right {
  margin-right: 10px;
}

div.navbar > div.left > h1 > a {
  text-decoration: none;
  color: #ffffff;
}

div.navbar > div.right > ul.pages {
  margin-left: 0px;
  list-style: none;
  display: flex;
}

div.navbar > div.right > ul.pages > li:not(:last-child) {
  margin-right: 10px;
}

ul.pages > li > a {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #2a2a2a;
  border: 1px solid #4a4a4a;
  text-decoration: none;
  border-radius: 2px;
  color: #efefef;
  width: 72px;
  height: 32px;
}

div.content {
  justify-content: center;
  margin-top: 96px;
  display: grid;
}

div.content > section {
  width: 48rem;
}

div.content > section:not(:last-child) {
  margin-bottom: 48px;
}

div.content > section > h1 {
  margin-bottom: 10px;
}

div.content > section > ul.posts {
  list-style: none;
}

div.content > section > ul.posts > li:not(:last-child) {
  margin-bottom: 20px;
}

div.content > section > ul.posts > li:last-child {
  margin-bottom: 48px;
}

div.content > section > ul.posts > li > a {
  display: flex;
  flex-direction: column;
  text-decoration: none;
  background-color: #2a2a2a;
  border: 1px solid #4a4a4a;
  border-radius: 4px;
  color: #ffffff;
  padding: 20px;
}

div.content > section > ul.posts > li > a > div.metadata {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 5px;
}

div.content > section > ul.posts > li > a > p {
  color: rgba(255, 255, 255, 0.5);
}

div.content > section > ul.posts > li > a > div.metadata > h1 {
  font-size: 1.5rem;
}

div.content > section > ul.posts > li > a > div.metadata > p {
  padding: 0px 5px 0px 5px;
  background-color: #1a1a1a;
  border: 1px solid #4a4a4a;
  justify-content: center;
  align-items: center;
  border-radius: 4px;
  max-height: 23px;
  font-size: 11px;
  display: flex;
}

div.metadata > p > img {
  margin-right: 5px;
  height: 12px;
}

section.article pre {
  border-radius: 4px;
  margin: 10px 0px 10px 0px;
  border: 1px solid #4a4a4a;
  overflow-x: scroll;
  background: #0a0a0a;
  padding: 10px;
  width: 100%;
}

section.article code {
  background: #0a0a0a;
  padding: 0px 5px 0px 5px;
  border: 1px solid #4a4a4a;
  font-family: 'Berkeley Mono', monospace;
  border-radius: 4px;
  font-size: 11px;
}

section.article pre > code {
  padding: 0px !important;
  font-size: 11px;
  border: none;
}

section.article h1,
section.article h2,
section.article h3,
section.article h4,
section.article h5,
section.article h6 {
  margin: 25px 0px 10px 0px;
}

section.article p {
  margin: 10px 0px 10px 0px;
}

section.article mark {
  background: #ffffff;
  color: #1a1a1a;
  padding: 0px 2px 0px 2px;
}

section.article a {
  text-decoration: underline;
  color: #ffffff;
}

section.article table {
  border: 1px solid #4a4a4a;
  background-color: #3a3a3a;
  border-radius: 4px;
  margin: 10px 0px 10px 0px;
  border-spacing: 0px;
  width: 100%;
}

section.article table th {
  background-color: #4a4a4a;
  padding: 5px 0px 5px 0px;
  border: none;
}

section.article table td {
  padding: 8px 10px 8px 10px;
  border-bottom: 1px solid #4a4a4a;
}

section.article table tr:nth-child(even) td {
  background-color: #2a2a2a;
}

section.article table td:not(:last-child) {
  border-right: 1px solid #4a4a4a;
}

section.article table tr:last-child td {
  border-bottom: none !important;
}

section.article img {
  border: 1px solid #4a4a4a;
  border-radius: 4px;
  max-width: 100%;
}

section.article figure {
  text-align: center;
}

section.article figcaption {
  color: rgba(255, 255, 255, 0.5);
  text-align: center;
}

section.article ol,
section.article ul {
  margin-left: 2rem;
}

section.article blockquote {
  border-left: 2px solid #4a4a4a;
  background-color: #0a0a0a;
  padding: 5px 10px 5px 10px;
}

section.article blockquote p {
  margin: 0px;
}

section.article > p.copyright {
  border-top: 1px solid rgba(255, 255, 255, 0.10);
  color: rgba(255, 255, 255, 0.25);
  padding-top: 8px;
  font-size: 10px;
}

section.article > p.copyright > a {
  color: rgba(255, 255, 255, 0.5);
  text-decoration: none;
}

div.content > div.metadata {
  border-bottom: 1px solid #4a4a4a;
  padding-bottom: 10px;
  margin-bottom: 0px;
}

div.content > div.metadata > div {
  justify-content: space-between;
  margin-top: 5px;
  display: flex;
}

div.content > div.metadata > div > p {
  color: rgba(255, 255, 255, 0.5);
}

@media only screen and (max-width: 632px) {
  div.container {
    width: 80%;
  }

  div.details {
    flex-direction: column;
    align-items: center;
  }

  div.about {
    align-items: center;
    margin-top: 15px;
    margin-left: 0px !important;
    width: 100%;
  }

  ul.socials {
    flex-direction: column;
    margin-top: 15px !important;
  }

  ul.socials > li {
    margin-right: 0px;
  }

  ul.socials > li:not(:last-child) {
    margin-bottom: 10px;
  }

  ul.socials > li > a {
    width: 100%;
    height: 48px;
  }

  span.label {
    display: inline-block;
    margin-left: 8px;
  }

  div.content {
    margin-left: 20px;
    margin-right: 20px;
    display: block;
  }

  div.content > section {
    max-width: 48rem;
    width: auto;
  }

  section.article pre {
    width: auto;
  }

  div.content > div.metadata > div > p:first-child {
    font-size: 12px;
  }

  div.content > div.metadata > div > p:last-child {
    display: none;
  }

  div.content > div.metadata > h1 {
    font-size: 24px;
  }

  ul.posts > li > a > div.metadata > h1 {
    font-size: 16px !important;
  }

  ul.posts > li > a > p {
    font-size: 12px;
  }

  ul.posts > li > a {
    padding: 10px !important;
  }
}

@media only screen and (max-width: 450px) {
  ul.pages > li > a {
    font-size: 12px;
    height: 28px;
    width: 64px;
  }

  div.container > div.details > div.about > h1 {
    font-size: 20px;
  }

  div.container > div.details > div.about > h2 {
    font-size: 15px;
  }
}

